fix: shelf card price alignment

--- a/styles/sass/components/shelf/vtex.flex-layout.scss
+++ b/styles/sass/components/shelf/vtex.flex-layout.scss
@@ -79,3 +79,9 @@
     }
   }
 }
+.flexColChild--price-container-without-pix {
+  display: contents;
+}
+.flexCol--price-container-without-pix {
+  justify-content: flex-end;
+}
